@@ -1,3 +1,9 @@
+MTA utils (1.3-1)
+
+  * Fix key buffer overrun by using additional call to EVP_EncryptInit_ex to set the key
+  * size after initial call to EVP_EncryptInit_ex which set the algorithm only
+  -- Gavriel Karasin <gavrielk@mta.ac.il>  Sun, 10 Jan 2021 22:25:00 +0300
+ 
 MTA utils (1.2-1)
 
   * Replace AES-256-ECB with RC2-ECB encryption algorithm to avoid key and data padding 
